--- a/index.html
+++ b/index.html
@@ -17,37 +17,24 @@
     </nav>
 
     <div id="app">
-        <div class="contact">
-            <div class="image10"></div>
-            <div class="text13">
-                <div class="headline"><p>Call us at 1-800-555-5555</p></div>
-                <div class="left">
-                    Sun:<br>
-                    Mon:<br>
-                    Tues:<br>
-                    Wed: <br>
-                    Thurs:<br>
-                    Fri:<br>
-                    Sat:<br>
-                </div>
-                <div class="right">
-                    Closed<br>
-                    9am to 7pm<br>
-                    9am to 7pm<br>
-                    9am to 7pm<br>
-                    9am to 7pm<br>
-                    9am to 7pm<br>
-                    Closed<br>
+        <div class="home">
+            <div class="hero1"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse tincidunt mi non sem dapibus, convallis lobortis erat consectetur. Praesent finibus nisi eu bibendum tristique. Nullam magna nulla, feugiat vitae iaculis id, bibendum nec ligula. Nullam id enim mattis, convallis orci quis, hendrerit velit. Suspendisse tortor tortor, cursus sed libero sed.</p></div>
+            <div class="container1">
+                <div class="image1"></div>
+                <div class="text1">
+                    <h1>Hello</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse tincidunt mi non sem dapibus, convallis lobortis erat consectetur. Praesent finibus nisi eu bibendum tristique. Nullam magna nulla, feugiat vitae iaculis id, bibendum nec ligula. Nullam id enim mattis, convallis orci quis, hendrerit velit. Suspendisse tortor tortor, cursus sed libero sed.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse tincidunt mi non sem dapibus, convallis lobortis erat consectetur. Praesent finibus nisi eu bibendum tristique. </p>
                 </div>
             </div>
-            <div class="image11"></div>
-            <div class="text14">Email us at Any Ole Travel Company<br><br>
-            Dave@AnyOle.com</div>
-            <div class="image12"></div>
-            <div class="text15">Or just stop in..<br>
-            We're located at 1137 Lucas Boulevard<br>San Francisco, California 94124
-        </div>
-        </div>
+            <div class="container2">
+                <div class="text2">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse tincidunt mi non sem dapibus, convallis lobortis erat consectetur. Praesent finibus nisi eu bibendum tristique. Nullam magna nulla, feugiat vitae iaculis id, bibendum nec ligula. Nullam id enim mattis, convallis orci quis, hendrerit velit. Suspendisse tortor tortor, cursus sed libero sed.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse tincidunt mi non sem dapibus, convallis lobortis erat consectetur. Praesent finibus nisi eu bibendum tristique. </p>
+                </div>
+                <div class="image2"></div>
+            </div>
+            </div>
     </div>
 
     <script src="lib/jquery-3.6.0.min.js"></script>
